--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -44,6 +44,7 @@ body {
 }
 
 .play-item {
+  z-index: 100;
   position: relative;
   padding: 5px;
   padding-left: 20px;
@@ -75,15 +76,15 @@ body {
   justify-content: center;
   align-items: center;
   width: 200px;
-  height: 50px;
-  /* margin-bottom: 10px; */
+  height: 28px;
+  margin-bottom: 10px;
 }
 
 .progress-container {
   width: 200px;
   height: 10px;
   background-color: rgba(223, 219, 218, 0.78);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   border-radius: 5px;
   display: flex;
   align-items: center;
