--- a/momentum/css/style.css
+++ b/momentum/css/style.css
@@ -79,12 +79,18 @@ body {
   height: 28px;
   margin-bottom: 10px;
 }
+.music-time {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+  font-size: 10px;
+}
 
 .progress-container {
   width: 200px;
   height: 10px;
   background-color: rgba(223, 219, 218, 0.78);
-  margin-bottom: 10px;
+  margin-bottom: 3px;
   border-radius: 5px;
   display: flex;
   align-items: center;
